[project]
name = "preon"

version = "0.1.1"

description = ""
readme = "README.md"
authors = [
    {name = "Arik Ermshaus", email = "ermshaua@informatik.hu-berlin.de"}
]
keywords = [
    "precision-oncology",
    "data-integration",
    "text-mining",
    "normalization",
    "drug-names",
    "cancer-types"
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
requires-python = ">=3.7,<3.11"
dependencies = [
    "daproli>=0.22",
    "jellyfish>=0.9.0",
    "nltk>=3.6.5",
    "numpy>=1.21.0,<1.25",
    "pandas>=1.1.0,<1.6.0",
    "pronto>=2.5.0",
    "tqdm>=4.62.3",
    "lxml>=4.6.3"
]

[project.urls]
repository = "https://github.com/ermshaua/preon"
#documentation = ""
#download = ""

[project.license]
file = "LICENSE"

[build-system]
requires = ["setuptools", "wheel", "toml", "build"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
